<?xml version="1.0"?>
<package>
  <name>pwm_servo</name>
  <version>0.1.0</version>
  <description>The pwm_servo package</description>

  <maintainer email="nomumu-github@koso2-dan.ddo.jp">nomumu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
